# docmcp

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  railway.toml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 023fef859539_add_user_id_and_visibility_to_templates.py  0953347cba04_add_team_invitations.py  20251120_1907_eb063b034dcc_add_projects_and_documents_tables.py  20251121_1650_c842a705500c_add_order_to_documents.py  20251122_2100_a1b2c3d4e5f6_add_local_auth_support.py  20251122_2125_b2c3d4e5f6a7_convert_auth_provider_to_string.py  20251124_1719_023fef859539_add_user_id_and_visibility_to_templates.py  20251125_0000_c1d2e3f4a5b6_add_team_member_roles.py  20251125_000100_d2e3f4a5b6c7_add_role_to_team_invitations.py  20251203_1646-42cbd79a56f6_editable_by_agent.py  20251207_1515-4e0e2bd61499_add_api_tokens_table.py  20251224_1200-5f1f3ce72a00_add_archived_to_documents.py  a1b2c3d4e5f6_add_local_auth_support.py  a1b2c3d4e5f7_add_hierarchy_to_templates.py  b2c3d4e5f6a7_convert_auth_provider_to_string.py  c842a705500c_add_order_to_documents.py  d16d4632fe08_populate_user_id_for_existing_templates.py  e0a6ffbeeb3c_create_users_teams_and_sessions_tables.py  eb063b034dcc_add_projects_and_documents_tables.py  f970dc25089c_add_library_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/projects/: __init__.py  models.py  repositories.py
backend/tests/: __init__.py  conftest.py  test_library_api.py  test_main.py  test_mcp_routes.py  test_models.py  test_repositories.py
deploy/: .dockerignore  (+6 more)
(+108 files in other folders)
